--- a/package.json
+++ b/package.json
@@ -11,8 +11,17 @@
   },
   "dependencies": {
     "@react-native-picker/picker": "^2.1.0",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
+    "country-state-city": "^3.0.1",
+    "list-of-us-cities": "^1.0.1",
     "react": "17.0.2",
     "react-native": "0.66.0",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.9.0",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
